--- a/index.html
+++ b/index.html
@@ -434,7 +434,7 @@
 
         <!-- 카드 2 -->
         <a
-          href="./images/임도윤_2025 portfolio.pdf"
+          href="2025.html"
           class="card-item"
           style="background-image: url('https://images.pexels.com/photos/1181675/pexels-photo-1181675.jpeg?auto=compress&cs=tinysrgb&w=1200');"
           target="_blank"
@@ -464,7 +464,7 @@
 
         <!-- 카드 3 -->
         <a
-          href="./images/임도윤_2024 portfolio.pdf"
+          href="2024.html"
           class="card-item"
           style="background-image: url('images/2024.jpeg');"
           target="_blank"
@@ -494,7 +494,7 @@
 
         <!-- 카드 4 -->
         <a
-          href="./images/임도윤_2023 portfolio.pdf"
+          href="2023.html"
           class="card-item"
           style="background-image: url('images/2023.png');"
           target="_blank"
@@ -524,7 +524,7 @@
 
         <!-- 카드 5 -->
         <a
-          href="./images/임도윤_2021 portfolio.pdf"
+          href="2021.html"
           class="card-item"
           style="background-image: url('images/2021.png');"
           target="_blank"
@@ -610,7 +610,7 @@
 
     <!-- 모바일 카드 2 -->
     <a
-      href="./images/임도윤_2025 portfolio.pdf"
+      href="2025.html"
       class="mobile-card"
       style="background-image: url('https://images.pexels.com/photos/1181675/pexels-photo-1181675.jpeg?auto=compress&cs=tinysrgb&w=1200');"
       target="_blank"
@@ -636,7 +636,7 @@
 
     <!-- 모바일 카드 3 -->
     <a
-      href="./images/임도윤_2024 portfolio.pdf"
+      href="2024.html"
       class="mobile-card"
       style="background-image: url('images/2024mb.png');"
       target="_blank"
@@ -662,7 +662,7 @@
 
     <!-- 모바일 카드 4 -->
     <a
-      href="./images/임도윤_2023 portfolio.pdf"
+      href="2023.html"
       class="mobile-card"
       style="background-image: url('images/2023mb.png');"
       target="_blank"
@@ -688,7 +688,7 @@
 
     <!-- 모바일 카드 5 -->
     <a
-      href="./images/임도윤_2021 portfolio.pdf"
+      href="2021.html"
       class="mobile-card"
       style="background-image: url('images/2021.png');"
       target="_blank"
