모바일 이미지 깨지는거 수정

--- a/2021.html
+++ b/2021.html
@@ -107,33 +107,33 @@
     </div>
 
     <div>
-      <img src="portfolio/2021_1.png">
-      <img src="portfolio/2021_2.png">
-      <img src="portfolio/2021_3.png">
-      <img src="portfolio/2021_4.png">
-      <img src="portfolio/2021_5.png">
-      <img src="portfolio/2021_6.png">
-      <img src="portfolio/2021_7.png">
-      <img src="portfolio/2021_8.png">
-      <img src="portfolio/2021_9.png">
-      <img src="portfolio/2021_10.png">
-      <img src="portfolio/2021_11.png">
-      <img src="portfolio/2021_12.png">
-      <img src="portfolio/2021_13.png">
-      <img src="portfolio/2021_14.png">
-      <img src="portfolio/2021_15.png">
-      <img src="portfolio/2021_16.png">
-      <img src="portfolio/2021_17.png">
-      <img src="portfolio/2021_18.png">
-      <img src="portfolio/2021_19.png">
-      <img src="portfolio/2021_20.png">
-      <img src="portfolio/2021_21.png">
-      <img src="portfolio/2021_22.png">
-      <img src="portfolio/2021_23.png">
-      <img src="portfolio/2021_24.png">
-      <img src="portfolio/2021_25.png">
-      <img src="portfolio/2021_26.png">
-      <img src="portfolio/2021_27.png">
+      <img src="portfolio/2021_1.png" width="100%">
+      <img src="portfolio/2021_2.png" width="100%">
+      <img src="portfolio/2021_3.png" width="100%">
+      <img src="portfolio/2021_4.png" width="100%">
+      <img src="portfolio/2021_5.png" width="100%">
+      <img src="portfolio/2021_6.png" width="100%">
+      <img src="portfolio/2021_7.png" width="100%">
+      <img src="portfolio/2021_8.png" width="100%">
+      <img src="portfolio/2021_9.png" width="100%">
+      <img src="portfolio/2021_10.png" width="100%">
+      <img src="portfolio/2021_11.png" width="100%">
+      <img src="portfolio/2021_12.png" width="100%">
+      <img src="portfolio/2021_13.png" width="100%">
+      <img src="portfolio/2021_14.png" width="100%">
+      <img src="portfolio/2021_15.png" width="100%">
+      <img src="portfolio/2021_16.png" width="100%">
+      <img src="portfolio/2021_17.png" width="100%">
+      <img src="portfolio/2021_18.png" width="100%">
+      <img src="portfolio/2021_19.png" width="100%">
+      <img src="portfolio/2021_20.png" width="100%">
+      <img src="portfolio/2021_21.png" width="100%">
+      <img src="portfolio/2021_22.png" width="100%">
+      <img src="portfolio/2021_23.png" width="100%">
+      <img src="portfolio/2021_24.png" width="100%">
+      <img src="portfolio/2021_25.png" width="100%">
+      <img src="portfolio/2021_26.png" width="100%">
+      <img src="portfolio/2021_27.png" width="100%">
 
       <!-- 이미지 계속 추가하면 됨 -->
     </div>
