--- a/2023.html
+++ b/2023.html
@@ -107,30 +107,30 @@
     </div>
 
     <div>
-      <img src="portfolio/2023_1.png">
-      <img src="portfolio/2023_2.png">
-      <img src="portfolio/2023_3.png">
-      <img src="portfolio/2023_4.png">
-      <img src="portfolio/2023_5.png">
-      <img src="portfolio/2023_6.png">
-      <img src="portfolio/2023_7.png">
-      <img src="portfolio/2023_8.png">
-      <img src="portfolio/2023_9.png">
-      <img src="portfolio/2023_10.png">
-      <img src="portfolio/2023_11.png">
-      <img src="portfolio/2023_12.png">
-      <img src="portfolio/2023_13.png">
-      <img src="portfolio/2023_14.png">
-      <img src="portfolio/2023_15.png">
-      <img src="portfolio/2023_16.png">
-      <img src="portfolio/2023_17.png">
-      <img src="portfolio/2023_18.png">
-      <img src="portfolio/2023_19.png">
-      <img src="portfolio/2023_20.png">
-      <img src="portfolio/2023_21.png">
-      <img src="portfolio/2023_22.png">
-      <img src="portfolio/2023_23.png">
-      <img src="portfolio/2023_24.png">
+      <img src="portfolio/2023_1.png" width="100%">
+      <img src="portfolio/2023_2.png" width="100%">
+      <img src="portfolio/2023_3.png" width="100%">
+      <img src="portfolio/2023_4.png" width="100%">
+      <img src="portfolio/2023_5.png" width="100%">
+      <img src="portfolio/2023_6.png" width="100%">
+      <img src="portfolio/2023_7.png" width="100%">
+      <img src="portfolio/2023_8.png" width="100%">
+      <img src="portfolio/2023_9.png" width="100%">
+      <img src="portfolio/2023_10.png" width="100%">
+      <img src="portfolio/2023_11.png" width="100%">
+      <img src="portfolio/2023_12.png" width="100%">
+      <img src="portfolio/2023_13.png" width="100%">
+      <img src="portfolio/2023_14.png" width="100%">
+      <img src="portfolio/2023_15.png" width="100%">
+      <img src="portfolio/2023_16.png" width="100%">
+      <img src="portfolio/2023_17.png" width="100%">
+      <img src="portfolio/2023_18.png" width="100%">
+      <img src="portfolio/2023_19.png" width="100%">
+      <img src="portfolio/2023_20.png" width="100%">
+      <img src="portfolio/2023_21.png" width="100%">
+      <img src="portfolio/2023_22.png" width="100%">
+      <img src="portfolio/2023_23.png" width="100%">
+      <img src="portfolio/2023_24.png" width="100%">
 
       <!-- 이미지 계속 추가하면 됨 -->
     </div>
