--- a/2024.html
+++ b/2024.html
@@ -107,30 +107,30 @@
     </div>
 
     <div>
-      <img src="portfolio/2024_1.png">
-      <img src="portfolio/2024_2.png">
-      <img src="portfolio/2024_3.png">
-      <img src="portfolio/2024_4.png">
-      <img src="portfolio/2024_5.png">
-      <img src="portfolio/2024_6.png">
-      <img src="portfolio/2024_7.png">
-      <img src="portfolio/2024_8.png">
-      <img src="portfolio/2024_9.png">
-      <img src="portfolio/2024_10.png">
-      <img src="portfolio/2024_11.png">
-      <img src="portfolio/2024_12.png">
-      <img src="portfolio/2024_13.png">
-      <img src="portfolio/2024_14.png">
-      <img src="portfolio/2024_15.png">
-      <img src="portfolio/2024_16.png">
-      <img src="portfolio/2024_17.png">
-      <img src="portfolio/2024_18.png">
-      <img src="portfolio/2024_19.png">
-      <img src="portfolio/2024_20.png">
-      <img src="portfolio/2024_21.png">
-      <img src="portfolio/2024_22.png">
-      <img src="portfolio/2024_23.png">
-      <img src="portfolio/2024_24.png">
+      <img src="portfolio/2024_1.png" width="100%">
+      <img src="portfolio/2024_2.png" width="100%">
+      <img src="portfolio/2024_3.png" width="100%">
+      <img src="portfolio/2024_4.png" width="100%">
+      <img src="portfolio/2024_5.png" width="100%">
+      <img src="portfolio/2024_6.png" width="100%">
+      <img src="portfolio/2024_7.png" width="100%">
+      <img src="portfolio/2024_8.png" width="100%">
+      <img src="portfolio/2024_9.png" width="100%">
+      <img src="portfolio/2024_10.png" width="100%">
+      <img src="portfolio/2024_11.png" width="100%">
+      <img src="portfolio/2024_12.png" width="100%">
+      <img src="portfolio/2024_13.png" width="100%">
+      <img src="portfolio/2024_14.png" width="100%">
+      <img src="portfolio/2024_15.png" width="100%">
+      <img src="portfolio/2024_16.png" width="100%">
+      <img src="portfolio/2024_17.png" width="100%">
+      <img src="portfolio/2024_18.png" width="100%">
+      <img src="portfolio/2024_19.png" width="100%">
+      <img src="portfolio/2024_20.png" width="100%">
+      <img src="portfolio/2024_21.png" width="100%">
+      <img src="portfolio/2024_22.png" width="100%">
+      <img src="portfolio/2024_23.png" width="100%">
+      <img src="portfolio/2024_24.png" width="100%">
 
       <!-- 이미지 계속 추가하면 됨 -->
     </div>
