--- a/2025.html
+++ b/2025.html
@@ -107,24 +107,24 @@
     </div>
 
     <div>
-      <img src="portfolio/2025_1.png">
-      <img src="portfolio/2025_2.png">
-      <img src="portfolio/2025_3.png">
-      <img src="portfolio/2025_4.png">
-      <img src="portfolio/2025_5.png">
-      <img src="portfolio/2025_6.png">
-      <img src="portfolio/2025_7.png">
-      <img src="portfolio/2025_8.png">
-      <img src="portfolio/2025_9.png">
-      <img src="portfolio/2025_10.png">
-      <img src="portfolio/2025_11.png">
-      <img src="portfolio/2025_12.png">
-      <img src="portfolio/2025_13.png">
-      <img src="portfolio/2025_14.png">
-      <img src="portfolio/2025_15.png">
-      <img src="portfolio/2025_16.png">
-      <img src="portfolio/2025_17.png">
-      <img src="portfolio/2025_18.png">
+      <img src="portfolio/2025_1.png" width="100%">
+      <img src="portfolio/2025_2.png" width="100%">
+      <img src="portfolio/2025_3.png" width="100%">
+      <img src="portfolio/2025_4.png" width="100%">
+      <img src="portfolio/2025_5.png" width="100%">
+      <img src="portfolio/2025_6.png" width="100%">
+      <img src="portfolio/2025_7.png" width="100%">
+      <img src="portfolio/2025_8.png" width="100%">
+      <img src="portfolio/2025_9.png" width="100%">
+      <img src="portfolio/2025_10.png" width="100%">
+      <img src="portfolio/2025_11.png" width="100%">
+      <img src="portfolio/2025_12.png" width="100%">
+      <img src="portfolio/2025_13.png" width="100%">
+      <img src="portfolio/2025_14.png" width="100%">
+      <img src="portfolio/2025_15.png" width="100%">
+      <img src="portfolio/2025_16.png" width="100%">
+      <img src="portfolio/2025_17.png" width="100%">
+      <img src="portfolio/2025_18.png" width="100%">
       <!-- 이미지 계속 추가하면 됨 -->
     </div>
 
